--- a/Detector/pom.xml
+++ b/Detector/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>ImageProcessing</artifactId>
-        <groupId>ImageProcessing</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <groupId>com.image_processing</groupId>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
