--- a/DetectorConsole/pom.xml
+++ b/DetectorConsole/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>ImageProcessing</artifactId>
-        <groupId>ImageProcessing</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <groupId>com.image_processing</groupId>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -14,7 +14,7 @@
     <dependencies>
 
         <dependency>
-            <groupId>ImageProcessing</groupId>
+            <groupId>com.image_processing</groupId>
             <artifactId>Detector</artifactId>
             <version>${project.version}</version>
         </dependency>
