--- a/Detector/pom.xml
+++ b/Detector/pom.xml
@@ -14,30 +14,40 @@
     <dependencies>
 
         <dependency>
-            <groupId>org.controlsfx</groupId>
-            <artifactId>controlsfx</artifactId>
-            <version>8.40.12</version>
-        </dependency>
-
-        <!-- Private JARS -->
-
-        <dependency>
             <groupId>com.oracle</groupId>
             <artifactId>javafx</artifactId>
-            <version>RELEASE</version>
-            <scope>system</scope>
-            <systemPath>${java.home}/../../../../local/jdk1.8.0_121/jre/lib/ext/jfxrt.jar</systemPath>
         </dependency>
 
         <dependency>
             <groupId>opencv-310</groupId>
             <artifactId>opencv-310</artifactId>
-            <scope>system</scope>
-            <version>RELEASE</version>
-            <systemPath>${project.basedir}/../ExtLib/OpenCV-3.1.0/Linux32/opencv-310.jar</systemPath>
         </dependency>
 
     </dependencies>
+
+    <dependencyManagement>
+
+        <dependencies>
+
+            <dependency>
+                <groupId>com.oracle</groupId>
+                <artifactId>javafx</artifactId>
+                <version>RELEASE</version>
+                <scope>system</scope>
+                <systemPath>${java.home}/../../../../local/jdk1.8.0_121/jre/lib/ext/jfxrt.jar</systemPath>
+            </dependency>
+
+            <dependency>
+                <groupId>opencv-310</groupId>
+                <artifactId>opencv-310</artifactId>
+                <scope>system</scope>
+                <version>RELEASE</version>
+                <systemPath>${project.basedir}/../ExtLib/OpenCV-3.1.0/Linux32/opencv-310.jar</systemPath>
+            </dependency>
+
+        </dependencies>
+
+    </dependencyManagement>
 
     <distributionManagement>
         <repository>
